--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "axios-mock-adapter": "^1.15.0",
+    "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.1.3",
     "create.js": "0.0.16",
     "element-ui": "^2.4.11",
@@ -25,6 +26,7 @@
     "js-cookie": "^2.2.0",
     "marky": "^1.2.1",
     "mockjs": "^1.0.1-beta3",
+    "vconsole": "^3.3.4",
     "vue": "^2.5.2",
     "vue-i18n": "7.3.2",
     "vue-router": "^3.0.1",
